Fix startup