@@ -1,2 +1,2 @@
 @echo off
-java -p modules -m gomint.server/io.gomint.server.Bootstrap
+java --add-opens java.base/java.nio=io.netty.common --add-exports java.base/jdk.internal.misc=io.netty.common -p modules -m gomint.server/io.gomint.server.Bootstrap
